# python-testing-mcp

./: .gitignore  =7.0.0  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  MCP_TOOLS_SUMMARY.md  README.md  amp_mcp_config.json  claude_code_config.json  cursor_mcp_config.json  dev_test.py  example.py  local_fuzz_test.py  main.py  mcp_config.json  mcp_server.py  pyproject.toml  python_testing_mcp_server.py  quick_sample_test.py  requirements.txt  test_example.py  test_example_coverage.py  test_mcp.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  main.baml  testing.baml
demo/: advanced_algorithms.py  basic_example_functions.py  data_processor.py  fuzz_example_functions.py  medium_complexity.py  security_analyzer.py  test_basic_example_functions.py  test_example_functions.py  test_medium_complexity.py
fuzzer/: __init__.py  analyzer.py
test_samples/: sample_module.py
tools/: __init__.py  coverage_tester.py  fuzz_tester.py  mutation_tester.py  registry.py  unit_test_generator.py
tools/coverage/: __init__.py  analyzer.py  runner.py  tool.py
tools/fuzzer/: baml_client.py  fuzzer.py  gemini_client.py  tool.py
tools/mutation/: __init__.py  baml_client.py  mutator.py  operators.py  runner.py  tool.py
tools/unittest/: __init__.py  baml_client.py  generator.py  tool.py
utils/: __init__.py  ai_clients.py  file_handlers.py  mutation_engine.py  mutation_intelligence.py  mutation_test_executor.py
