[project]
name = "python-testing-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse>=1.6.3",
    "baml>=0.19.1",
    "baml-cli>=0.1.0",
    "baml-py==0.202.1",
    "black>=25.1.0",
    "coverage>=7.10.2",
    "fastmcp>=2.1.2",
    "google-generativeai>=0.8.5",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=7.4.4",
    "uv>=0.8.4",
]
